--- a/index.html
+++ b/index.html
@@ -2,70 +2,121 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine’s Day ❤️</title>
+  <title>7 Days of Valentine ❤️</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #ff758c, #ff7eb3);
-      color: white;
+      background: linear-gradient(120deg, #ff5f6d, #ffc371);
+      color: #fff;
       text-align: center;
     }
-    .container {
-      padding: 50px 20px;
-    }
     h1 {
+      margin-top: 40px;
       font-size: 3rem;
+    }
+    .subtitle {
+      opacity: 0.9;
+      margin-bottom: 40px;
+    }
+    .day {
+      background: rgba(255,255,255,0.15);
+      margin: 20px;
+      padding: 25px;
+      border-radius: 18px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+    .day h2 {
+      font-size: 2rem;
       margin-bottom: 10px;
     }
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: auto;
-    }
-    .heart {
-      font-size: 4rem;
-      animation: beat 1s infinite;
-    }
-    @keyframes beat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-    .card {
-      background: rgba(255,255,255,0.15);
-      border-radius: 15px;
-      padding: 30px;
-      margin-top: 40px;
+    .emoji {
+      font-size: 2.5rem;
     }
     footer {
-      margin-top: 50px;
+      margin: 50px 0 30px;
       font-size: 0.9rem;
       opacity: 0.8;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
-    <div class="heart">❤️</div>
-    <h1>Happy Valentine’s Day</h1>
+
+  <h1>7 Days of Valentine 💕</h1>
+  <p class="subtitle">Every day, one reason why I love you</p>
+
+  <div class="day">
+    <div class="emoji">🌹</div>
+    <h2>Rose Day</h2>
     <p>
-      To my favorite person in the world —  
-      every day with you feels like Valentine’s Day.
+      Just like this rose, my love for you grows more beautiful every day.
     </p>
-
-    <div class="card">
-      <h2>Why I Love You 💕</h2>
-      <p>
-        You make my ordinary days special,  
-        my hard days easier,  
-        and my life happier.
-      </p>
-    </div>
-
-    <footer>
-      Made with ❤️ just for you
-    </footer>
   </div>
+
+  <div class="day">
+    <div class="emoji">💍</div>
+    <h2>Propose Day</h2>
+    <p>
+      I may not propose every day, but my heart chooses you again and again.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">🍫</div>
+    <h2>Chocolate Day</h2>
+    <p>
+      Life with you is sweeter than any chocolate in the world.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">🧸</div>
+    <h2>Teddy Day</h2>
+    <p>
+      If I could, I’d be your teddy — always there to comfort you.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">🤞</div>
+    <h2>Promise Day</h2>
+    <p>
+      I promise to stand by you, support you, and love you forever.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">🤗</div>
+    <h2>Hug Day</h2>
+    <p>
+      Whenever life feels heavy, my arms are always open for you.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">😘</div>
+    <h2>Kiss Day</h2>
+    <p>
+      Every kiss is a reminder of how deeply I love you.
+    </p>
+  </div>
+
+  <div class="day">
+    <div class="emoji">❤️</div>
+    <h2>Valentine’s Day</h2>
+    <p>
+      You are my today, my tomorrow, and my forever.
+    </p>
+  </div>
+
+  <footer>
+    Made with ❤️ only for you
+  </footer>
+
 </body>
 </html>
