--- a/index.html
+++ b/index.html
@@ -1,122 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>7 Days of Valentine ❤️</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(120deg, #ff5f6d, #ffc371);
-      color: #fff;
-      text-align: center;
-    }
-    h1 {
-      margin-top: 40px;
-      font-size: 3rem;
-    }
-    .subtitle {
-      opacity: 0.9;
-      margin-bottom: 40px;
-    }
-    .day {
-      background: rgba(255,255,255,0.15);
-      margin: 20px;
-      padding: 25px;
-      border-radius: 18px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
-    .day h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-    .emoji {
-      font-size: 2.5rem;
-    }
-    footer {
-      margin: 50px 0 30px;
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>7 Days of Valentine ❤️</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Handwritten font -->
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(120deg, #ff5f6d, #ffc371);
+  color: white;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 30px;
+  font-size: 3rem;
+}
+
+.day {
+  background: rgba(255,255,255,0.15);
+  margin: 25px auto;
+  padding: 25px;
+  border-radius: 20px;
+  max-width: 750px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+}
+
+.locked {
+  opacity: 0.4;
+  filter: blur(2px);
+}
+
+.note {
+  font-family: 'Pacifico', cursive;
+  font-size: 1.2rem;
+  margin-top: 15px;
+}
+
+img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 15px;
+  margin-top: 15px;
+}
+
+button {
+  background: #ff2e63;
+  border: none;
+  padding: 15px 25px;
+  border-radius: 30px;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+button:hover {
+  background: #ff1744;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.7);
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-content {
+  background: white;
+  color: #333;
+  padding: 30px;
+  border-radius: 20px;
+  max-width: 400px;
+  font-family: 'Pacifico', cursive;
+}
+
+footer {
+  margin: 40px 0 20px;
+  opacity: 0.8;
+}
+</style>
 </head>
 
 <body>
 
-  <h1>7 Days of Valentine 💕</h1>
-  <p class="subtitle">Every day, one reason why I love you</p>
+<h1>7 Days of Valentine 💕</h1>
+<p>One surprise unlocked every day…</p>
 
-  <div class="day">
-    <div class="emoji">🌹</div>
-    <h2>Rose Day</h2>
-    <p>
-      Just like this rose, my love for you grows more beautiful every day.
-    </p>
+<!-- MUSIC -->
+<audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
+
+<div id="days">
+
+  <div class="day" data-day="7">
+    <h2>🌹 Rose Day</h2>
+    <img src="https://picsum.photos/300?1">
+    <p class="note">Like this rose, my love blooms endlessly for you.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">💍</div>
-    <h2>Propose Day</h2>
-    <p>
-      I may not propose every day, but my heart chooses you again and again.
-    </p>
+  <div class="day" data-day="8">
+    <h2>💍 Propose Day</h2>
+    <img src="https://picsum.photos/300?2">
+    <p class="note">I choose you today, tomorrow, always.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">🍫</div>
-    <h2>Chocolate Day</h2>
-    <p>
-      Life with you is sweeter than any chocolate in the world.
-    </p>
+  <div class="day" data-day="9">
+    <h2>🍫 Chocolate Day</h2>
+    <img src="https://picsum.photos/300?3">
+    <p class="note">Life with you is sweeter than chocolate.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">🧸</div>
-    <h2>Teddy Day</h2>
-    <p>
-      If I could, I’d be your teddy — always there to comfort you.
-    </p>
+  <div class="day" data-day="10">
+    <h2>🧸 Teddy Day</h2>
+    <img src="https://picsum.photos/300?4">
+    <p class="note">If you ever feel low, hug me tight.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">🤞</div>
-    <h2>Promise Day</h2>
-    <p>
-      I promise to stand by you, support you, and love you forever.
-    </p>
+  <div class="day" data-day="11">
+    <h2>🤞 Promise Day</h2>
+    <img src="https://picsum.photos/300?5">
+    <p class="note">I promise to stand beside you forever.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">🤗</div>
-    <h2>Hug Day</h2>
-    <p>
-      Whenever life feels heavy, my arms are always open for you.
-    </p>
+  <div class="day" data-day="12">
+    <h2>🤗 Hug Day</h2>
+    <img src="https://picsum.photos/300?6">
+    <p class="note">My arms are your safest place.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">😘</div>
-    <h2>Kiss Day</h2>
-    <p>
-      Every kiss is a reminder of how deeply I love you.
-    </p>
+  <div class="day" data-day="13">
+    <h2>😘 Kiss Day</h2>
+    <img src="https://picsum.photos/300?7">
+    <p class="note">Every kiss says what words cannot.</p>
   </div>
 
-  <div class="day">
-    <div class="emoji">❤️</div>
-    <h2>Valentine’s Day</h2>
-    <p>
-      You are my today, my tomorrow, and my forever.
-    </p>
+  <div class="day" data-day="14">
+    <h2>❤️ Valentine’s Day</h2>
+    <img src="https://picsum.photos/300?8">
+    <p class="note">You are my forever Valentine.</p>
+    <button onclick="openLove()">🎁 Open Surprise</button>
   </div>
 
-  <footer>
-    Made with ❤️ only for you
-  </footer>
+</div>
+
+<footer>
+Made with ❤️ only for you
+</footer>
+
+<!-- LOVE LETTER POPUP -->
+<div class="popup" id="lovePopup">
+  <div class="popup-content">
+    <h2>My Love 💌</h2>
+    <p>
+      From the moment you entered my life,  
+      everything became brighter.  
+      I don’t need a special day to love you —  
+      but I’ll celebrate you every single one.
+    </p>
+    <button onclick="closeLove()">Close ❤️</button>
+  </div>
+</div>
+
+<script>
+const today = new Date().getDate();
+document.querySelectorAll('.day').forEach(day => {
+  const unlock = day.getAttribute('data-day');
+  if (today < unlock) {
+    day.classList.add('locked');
+  }
+});
+
+function openLove() {
+  document.getElementById('lovePopup').style.display = 'flex';
+}
+
+function closeLove() {
+  document.getElementById('lovePopup').style.display = 'none';
+}
+</script>
 
 </body>
 </html>
