--- a/index.html
+++ b/index.html
@@ -8,277 +8,337 @@
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 <style>
-body {
+/* ---------- BASE ---------- */
+html, body {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: radial-gradient(circle at top, #1a000a, #000);
-  color: white;
-  text-align: center;
-  overflow-x: hidden;
 }
 
-/* PASSWORD */
+body {
+  min-height: 100svh;
+  background:
+    radial-gradient(circle at center, rgba(255,255,255,0.04), transparent 70%),
+    radial-gradient(circle at top, #1a000a, #000);
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  font-family: 'Segoe UI', sans-serif;
+  color: white;
+}
+
+:root {
+  --frame-ratio: 4 / 5; /* cinematic portrait */
+}
+
+/* ---------- LOCK ---------- */
 #lockScreen {
   position: fixed;
   inset: 0;
   background: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 3000;
+  display: grid;
+  place-items: center;
+  z-index: 9000;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+           env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
+
 .lock-box {
-  padding: 40px;
-  border-radius: 20px;
-  background: rgba(255,255,255,0.05);
-  box-shadow: 0 0 30px rgba(255,0,80,0.4);
+  width: min(90vw, 320px);
+  padding: 36px 28px;
+  border-radius: 22px;
+  background: rgba(255,255,255,0.07);
+  box-shadow: 0 30px 80px rgba(0,0,0,0.7);
+  text-align: center;
+  animation: popIn 0.6s ease-out;
 }
-input {
+
+@keyframes popIn {
+  from { transform: scale(0.9); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+input, button {
+  width: 100%;
   padding: 12px;
   border-radius: 25px;
   border: none;
-  width: 220px;
-  text-align: center;
+  margin-top: 14px;
 }
+
 button {
-  margin-top: 15px;
-  padding: 12px 30px;
-  border-radius: 30px;
-  border: none;
   background: crimson;
   color: white;
   cursor: pointer;
 }
 
-/* INTRO */
+/* ---------- INTRO ---------- */
 #intro {
-  display: none;
   position: fixed;
   inset: 0;
   background: black;
-  z-index: 2500;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: none;
+  place-items: center;
+  text-align: center;
   font-family: 'Pacifico', cursive;
+  z-index: 8000;
+}
+
+.fade {
+  opacity: 0;
+  animation: fadeIn 2s forwards;
 }
 @keyframes fadeIn { to { opacity: 1; } }
 
-/* DAYS */
-.day {
-  background: rgba(255,255,255,0.08);
-  margin: 30px auto;
-  padding: 30px;
-  border-radius: 20px;
-  max-width: 750px;
+/* ---------- TEST LABEL ---------- */
+#testLabel {
+  position: fixed;
+  top: calc(env(safe-area-inset-top) + 8px);
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.75rem;
+  opacity: 0.5;
 }
-.locked { opacity: 0.3; filter: blur(3px); }
-.note { font-family: 'Pacifico', cursive; font-size: 1.2rem; }
 
-/* KEN BURNS */
-.photo { overflow: hidden; border-radius: 15px; }
-.photo img {
-  width: 100%;
-  max-width: 320px;
-  animation: kenburns 18s infinite;
+/* ---------- STORY FRAME ---------- */
+:root {
+  --frame-w: min(92vw, 420px);
+  --frame-h: min(78vh, 640px);
+}
+
+#app {
+  width: var(--frame-w);
+  height: var(--frame-h);
+  position: relative;
+  border-radius: 22px;
+  background: rgba(255,255,255,0.06);
+  box-shadow: inset 0 0 60px rgba(0,0,0,0.6),
+              0 30px 80px rgba(0,0,0,0.7);
+  overflow: hidden;
+  animation: breathe 6s ease-in-out infinite;
+}
+
+@keyframes breathe {
+  0%,100% { box-shadow: inset 0 0 60px rgba(0,0,0,0.6), 0 30px 80px rgba(0,0,0,0.7); }
+  50% { box-shadow: inset 0 0 70px rgba(0,0,0,0.7), 0 35px 90px rgba(0,0,0,0.8); }
+}
+
+/* ---------- SLIDER ---------- */
+.story { width:100%; height:100%; overflow:hidden; }
+.track {
+  display:flex;
+  height:100%;
+  transition: transform 0.45s cubic-bezier(.25,.8,.25,1);
+}
+
+.card {
+  min-width:100%;
+  padding:16px;
+  box-sizing:border-box;
+  text-align:center;
+}
+
+.card.past { opacity:0.55; }
+.card.locked { opacity:0.3; filter:blur(3px); pointer-events:none; }
+
+h2 { margin:8px 0; }
+
+.image-frame {
+  width:100%;
+  height:60%;
+  border-radius:16px;
+  overflow:hidden;
+  margin:10px 0;
+}
+.image-frame img {
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  animation: kenburns 18s alternate infinite;
 }
 @keyframes kenburns {
-  from { transform: scale(1); }
-  to { transform: scale(1.15); }
+  from { transform:scale(1); }
+  to { transform:scale(1.12); }
 }
 
-/* GALLERY */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 15px;
+.note {
+  font-family:'Pacifico', cursive;
+  line-height:1.4;
 }
-.gallery img {
-  width: 100%;
-  border-radius: 15px;
-  animation: kenburns 20s infinite;
+.tamil {
+  font-size:0.95rem;
+  opacity:0.85;
 }
 
-/* POPUP */
+/* ---------- NAV ---------- */
+.nav {
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  background:rgba(0,0,0,0.4);
+  border:none;
+  color:white;
+  font-size:1.5rem;
+  padding:6px 10px;
+}
+.nav.left { left:-44px; }
+.nav.right { right:-44px; }
+
+/* ---------- VALENTINE BUTTON ---------- */
+.pulse {
+  animation: pulse 1.5s infinite;
+}
+@keyframes pulse {
+  0% { box-shadow:0 0 0 0 rgba(255,20,80,0.6); }
+  70% { box-shadow:0 0 0 18px rgba(255,20,80,0); }
+}
+
+/* ---------- POPUP ---------- */
 .popup {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.85);
-  z-index: 4000;
-  justify-content: center;
-  align-items: center;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.85);
+  display:none;
+  place-items:center;
+  z-index:9500;
 }
+
 .popup-content {
-  background: white;
-  color: #111;
-  padding: 30px;
-  border-radius: 20px;
-  max-width: 420px;
-  font-family: 'Pacifico', cursive;
-  position: relative;
+  width:min(90vw,360px);
+  padding:28px;
+  background:white;
+  color:#111;
+  border-radius:22px;
+  text-align:center;
+  font-family:'Pacifico', cursive;
 }
 
-/* FLOATING HEARTS */
-.floating-heart {
-  position: absolute;
-  bottom: -10px;
-  font-size: 18px;
-  animation: floatUp 6s linear infinite;
-}
-@keyframes floatUp {
-  to { transform: translateY(-110vh); opacity: 0; }
-}
-
-/* HEART CONFETTI */
+/* ---------- CONFETTI ---------- */
 .heart {
-  position: fixed;
-  top: -10px;
-  font-size: 18px;
-  animation: fallHeart linear forwards;
-  z-index: 5000;
+  position:fixed;
+  top:-10px;
+  font-size:18px;
+  animation: fall linear forwards;
 }
-@keyframes fallHeart {
-  to { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+@keyframes fall {
+  to { transform:translateY(110vh) rotate(360deg); opacity:0; }
 }
-
-/* TYPEWRITER */
-.typewriter span {
-  opacity: 0;
-  animation: showText 0.5s forwards;
-}
-@keyframes showText { to { opacity: 1; } }
 </style>
 </head>
 
 <body>
 
-<!-- PASSWORD -->
 <div id="lockScreen">
   <div class="lock-box">
-    <h2>For Rohini ❤️</h2>
-    <input type="password" id="password">
-    <br>
+    <h3>For Rohini ❤️</h3>
+    <input id="password" type="password">
     <button onclick="unlock()">Open 💖</button>
   </div>
 </div>
 
-<!-- INTRO -->
 <div id="intro">
-  <h1 style="opacity:0; animation:fadeIn 2s forwards;">Every love story is beautiful…</h1>
-  <h2 style="opacity:0; animation:fadeIn 2s 2s forwards;">but ours is my favorite ❤️</h2>
+  <div>
+    <h1 class="fade">Every love story is beautiful…</h1>
+    <h2 class="fade" style="animation-delay:2s;">but ours is my favorite ❤️</h2>
+  </div>
 </div>
 
-<!-- AUDIO -->
-<audio id="bgMusic" loop>
-  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3">
-</audio>
-<audio id="chime">
-  <source src="https://assets.mixkit.co/sfx/preview/mixkit-bell-notification-933.mp3">
-</audio>
+<p id="testLabel">🧪 Unlocked earlier days (test mode)</p>
 
-<h1>Ajith ❤️ Rohini</h1>
+<div id="app">
+  <button class="nav left" onclick="prev()">❮</button>
+  <button class="nav right" onclick="next()">❯</button>
 
-<!-- DAYS -->
-<div class="day" data-day="14">
-  <h2>❤️ Valentine’s Day</h2>
-  <div class="photo"><img src="valentine.jpg"></div>
-  <button onclick="openLove()">🎁 Open Surprise</button>
+  <div class="story" id="story">
+    <div class="track" id="track">
+
+      <div class="card" data-day="7"><h2>🌹 Rose Day</h2><div class="image-frame"><img src="rose.jpg"></div><p class="note">Our love bloomed beautifully 🌹<br><span class="tamil">நம்ம காதல் அழகா மலர்ந்த நாள்</span></p></div>
+      <div class="card" data-day="8"><h2>💍 Propose Day</h2><div class="image-frame"><img src="propose.jpg"></div><p class="note">I chose you forever 💍<br><span class="tamil">வாழ்க்கை முழுக்க உன்னைத் தேர்ந்தெடுத்த நாள்</span></p></div>
+      <div class="card" data-day="9"><h2>🍫 Chocolate Day</h2><div class="image-frame"><img src="chocolate.jpg"></div><p class="note">Sweet moments matter 🍫<br><span class="tamil">சின்ன நிமிஷங்கள்தான் இனிமை</span></p></div>
+      <div class="card" data-day="10"><h2>🧸 Teddy Day</h2><div class="image-frame"><img src="teddy.jpg"></div><p class="note">Everything feels cute 🧸<br><span class="tamil">உன்னோட இருந்தா எல்லாமே அழகு</span></p></div>
+      <div class="card" data-day="11"><h2>🤞 Promise Day</h2><div class="image-frame"><img src="promise.jpg"></div><p class="note">Always your side 🤞<br><span class="tamil">எப்போதும் உன் பக்கம் நான்</span></p></div>
+      <div class="card" data-day="12"><h2>🤗 Hug Day</h2><div class="image-frame"><img src="hug.jpg"></div><p class="note">You are home 🤍<br><span class="tamil">உன் அணைப்பே என் வீடு</span></p></div>
+      <div class="card" data-day="13"><h2>😘 Kiss Day</h2><div class="image-frame"><img src="kiss.jpg"></div><p class="note">No words needed 😘<br><span class="tamil">சொல்லாமலே புரியும்</span></p></div>
+
+      <div class="card" data-day="14">
+        <h2>❤️ Valentine’s Day</h2>
+        <div class="image-frame"><img src="valentine.jpg"></div>
+        <p class="note">Forever us ❤️<br><span class="tamil">இரண்டு இதயங்கள்… ஒரே வாழ்க்கை</span></p>
+        <button class="pulse" onclick="openLove()">🎁 Open Surprise</button>
+      </div>
+
+    </div>
+  </div>
 </div>
 
-<!-- POPUP -->
-<div class="popup" id="lovePopup">
+<div class="popup" id="popup">
   <div class="popup-content">
     <h2>My Rohini 💌</h2>
-    <p id="letter" class="typewriter"></p>
+    <p>Loving you is the best decision of my life.<br><br>எப்போதும்… உன்னோடு ❤️</p>
     <button onclick="closeLove()">Close ❤️</button>
   </div>
 </div>
 
 <script>
-const letterText = `Loving you is the best decision of my life.
-Every smile of yours completes me.
-No matter where life takes us,
-my heart will always choose you.
+const TEST_MODE = true;
+const allowed = ['rohini','kannamma'];
+let index = 0;
 
-எப்போதும்… உன்னோடு ❤️`;
-
-function typeWriter(text, el) {
-  el.innerHTML = '';
-  [...text].forEach((char, i) => {
-    const span = document.createElement('span');
-    span.textContent = char;
-    span.style.animationDelay = i * 0.05 + 's';
-    el.appendChild(span);
-  });
-}
+const cards = document.querySelectorAll('.card');
+const track = document.getElementById('track');
 
 function unlock() {
-  const allowed = ['rohini', 'kannamma'];
-  const entered = password.value.trim().toLowerCase();
-  if (allowed.includes(entered)) {
+  if (allowed.includes(password.value.toLowerCase())) {
     lockScreen.style.display = 'none';
-    intro.style.display = 'flex';
-    bgMusic.play();
-    setTimeout(() => intro.style.display = 'none', 6000);
-  } else alert('Wrong password 💔');
-}
-
-function openLove() {
-  const today = new Date();
-  if (today.getMonth() === 1 && today.getDate() === 14) launchHearts();
-  document.getElementById('chime').play();
-  lovePopup.style.display = 'flex';
-  typeWriter(letterText, document.getElementById('letter'));
-  floatingHearts();
-}
-
-function closeLove() {
-  lovePopup.style.display = 'none';
-}
-
-function launchHearts() {
-  const end = Date.now() + 10000;
-
-  // 🎨 Colors matched for romantic photos
-  const colors = [
-    '#ff1744', // deep rose
-    '#ff5fa2', // soft pink
-    '#ffc1cc', // blush
-    '#ffd700', // golden highlight
-    '#ffffff'  // white sparkle
-  ];
-
-  const interval = setInterval(() => {
-    for (let i = 0; i < 4; i++) {
-      const h = document.createElement('div');
-      h.className = 'heart';
-      h.innerHTML = '❤️';
-
-      h.style.left = Math.random() * 100 + 'vw';
-      h.style.color = colors[Math.floor(Math.random() * colors.length)];
-      h.style.fontSize = (Math.random() * 12 + 16) + 'px';
-      h.style.animationDuration = (Math.random() * 2 + 4) + 's';
-
-      document.body.appendChild(h);
-      setTimeout(() => h.remove(), 7000);
-    }
-
-    if (Date.now() > end) clearInterval(interval);
-  }, 250);
-}
-
-
-function floatingHearts() {
-  for (let i = 0; i < 15; i++) {
-    const h = document.createElement('div');
-    h.className = 'floating-heart';
-    h.innerHTML = '❤️';
-    h.style.left = Math.random() * 100 + 'vw';
-    h.style.animationDuration = (Math.random() * 3 + 4) + 's';
-    lovePopup.appendChild(h);
-    setTimeout(() => h.remove(), 6000);
+    intro.style.display = 'grid';
+    setTimeout(()=>intro.style.display='none',6000);
+    setup();
   }
+}
+
+function setup() {
+  const today = new Date().getDate();
+  cards.forEach((c,i)=>{
+    const d = +c.dataset.day;
+    if (d < today) c.classList.add('past');
+    else if (d > today) c.classList.add('locked');
+    if ((TEST_MODE && d <= today) || (!TEST_MODE && d === today)) index = i;
+  });
+  update();
+}
+
+function update() { track.style.transform = `translateX(-${index*100}%)`; }
+function next() { if(index<cards.length-1 && !cards[index+1].classList.contains('locked')){index++;update();} }
+function prev() { if(index>0){index--;update();} }
+
+let startX=0;
+story.addEventListener('touchstart',e=>startX=e.touches[0].clientX);
+story.addEventListener('touchend',e=>{
+  const dx=e.changedTouches[0].clientX-startX;
+  if(dx<-50) next();
+  if(dx>50) prev();
+});
+
+function openLove(){
+  popup.style.display='grid';
+  if(new Date().getMonth()===1 && new Date().getDate()===14) confetti();
+}
+function closeLove(){ popup.style.display='none'; }
+
+function confetti(){
+  const colors=['#ff1744','#ff5fa2','#ffd700','#fff'];
+  const end=Date.now()+9000;
+  const i=setInterval(()=>{
+    const h=document.createElement('div');
+    h.className='heart';
+    h.innerHTML='❤️';
+    h.style.left=Math.random()*100+'vw';
+    h.style.color=colors[Math.floor(Math.random()*colors.length)];
+    h.style.animationDuration='5s';
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),6000);
+    if(Date.now()>end) clearInterval(i);
+  },250);
 }
 </script>
 
