--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Ajith ❤️ Rohini</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
 <style>
-/* ---------- BASE ---------- */
+/* ================= BASE ================= */
 html, body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
-  margin: 0;
 }
 
 body {
   min-height: 100svh;
-  background:
-    radial-gradient(circle at center, rgba(255,255,255,0.04), transparent 70%),
-    radial-gradient(circle at top, #1a000a, #000);
+  background: radial-gradient(circle at top, #1a000a, #000);
+  color: white;
   display: grid;
   place-items: center;
   overflow: hidden;
   font-family: 'Segoe UI', sans-serif;
-  color: white;
 }
 
 :root {
-  --frame-ratio: 4 / 5; /* cinematic portrait */
+  --frame-ratio: 4 / 5;
 }
 
-/* ---------- LOCK ---------- */
+/* ================= LOCK SCREEN ================= */
 #lockScreen {
   position: fixed;
   inset: 0;
   background: black;
   display: grid;
   place-items: center;
-  z-index: 9000;
+  z-index: 5000;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
            env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
@@ -48,7 +47,7 @@ body {
   padding: 36px 28px;
   border-radius: 22px;
   background: rgba(255,255,255,0.07);
-  box-shadow: 0 30px 80px rgba(0,0,0,0.7);
+  box-shadow: 0 25px 60px rgba(0,0,0,0.65);
   text-align: center;
   animation: popIn 0.6s ease-out;
 }
@@ -58,170 +57,192 @@ body {
   to { transform: scale(1); opacity: 1; }
 }
 
-input, button {
+input {
   width: 100%;
   padding: 12px;
   border-radius: 25px;
   border: none;
-  margin-top: 14px;
+  text-align: center;
+  margin-top: 16px;
 }
 
 button {
+  margin-top: 18px;
+  padding: 12px 28px;
+  border-radius: 30px;
+  border: none;
   background: crimson;
   color: white;
+  font-size: 1rem;
   cursor: pointer;
 }
 
-/* ---------- INTRO ---------- */
+button:hover { background: #ff1744; }
+
+/* ================= INTRO ================= */
 #intro {
   position: fixed;
   inset: 0;
   background: black;
+  z-index: 4000;
   display: none;
   place-items: center;
   text-align: center;
   font-family: 'Pacifico', cursive;
-  z-index: 8000;
 }
 
 .fade {
   opacity: 0;
   animation: fadeIn 2s forwards;
 }
-@keyframes fadeIn { to { opacity: 1; } }
 
-/* ---------- TEST LABEL ---------- */
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+
+/* ================= APP FRAME ================= */
+#app {
+  width: min(92vw, 420px);
+  height: min(92svh, 720px);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* ================= TEST LABEL ================= */
 #testLabel {
   position: fixed;
   top: calc(env(safe-area-inset-top) + 8px);
   left: 50%;
   transform: translateX(-50%);
   font-size: 0.75rem;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
-/* ---------- STORY FRAME ---------- */
-:root {
-  --frame-w: min(92vw, 420px);
-  --frame-h: min(78vh, 640px);
-}
-
-#app {
-  width: var(--frame-w);
-  height: var(--frame-h);
-  position: relative;
+/* ================= DAY CARD ================= */
+.day {
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,0.08);
   border-radius: 22px;
-  background: rgba(255,255,255,0.06);
-  box-shadow: inset 0 0 60px rgba(0,0,0,0.6),
-              0 30px 80px rgba(0,0,0,0.7);
+  box-shadow: 0 0 25px rgba(255,0,80,0.3);
+  padding: 20px;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.day.active { display: flex; }
+
+.day.dimmed { opacity: 0.55; }
+
+h2 { margin-bottom: 12px; }
+
+/* ================= PHOTO FRAME FIX ================= */
+.photo {
+  width: 100%;
+  aspect-ratio: var(--frame-ratio);
   overflow: hidden;
-  animation: breathe 6s ease-in-out infinite;
+  border-radius: 18px;
+  position: relative;
+  background: #000;
+  margin-bottom: 14px;
 }
 
-@keyframes breathe {
-  0%,100% { box-shadow: inset 0 0 60px rgba(0,0,0,0.6), 0 30px 80px rgba(0,0,0,0.7); }
-  50% { box-shadow: inset 0 0 70px rgba(0,0,0,0.7), 0 35px 90px rgba(0,0,0,0.8); }
+.photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  animation: kenburns 18s ease-in-out infinite;
 }
 
-/* ---------- SLIDER ---------- */
-.story { width:100%; height:100%; overflow:hidden; }
-.track {
-  display:flex;
-  height:100%;
-  transition: transform 0.45s cubic-bezier(.25,.8,.25,1);
-}
-
-.card {
-  min-width:100%;
-  padding:16px;
-  box-sizing:border-box;
-  text-align:center;
-}
-
-.card.past { opacity:0.55; }
-.card.locked { opacity:0.3; filter:blur(3px); pointer-events:none; }
-
-h2 { margin:8px 0; }
-
-.image-frame {
-  width:100%;
-  height:60%;
-  border-radius:16px;
-  overflow:hidden;
-  margin:10px 0;
-}
-.image-frame img {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  animation: kenburns 18s alternate infinite;
-}
 @keyframes kenburns {
-  from { transform:scale(1); }
-  to { transform:scale(1.12); }
+  from { transform: scale(1); }
+  to { transform: scale(1.15); }
 }
 
+.photo::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(ellipse at center,
+    rgba(0,0,0,0) 60%,
+    rgba(0,0,0,0.35) 100%);
+}
+
+/* ================= TEXT ================= */
 .note {
-  font-family:'Pacifico', cursive;
-  line-height:1.4;
-}
-.tamil {
-  font-size:0.95rem;
-  opacity:0.85;
+  font-family: 'Pacifico', cursive;
+  font-size: 1.05rem;
+  line-height: 1.5;
 }
 
-/* ---------- NAV ---------- */
+/* ================= NAV ================= */
 .nav {
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  background:rgba(0,0,0,0.4);
-  border:none;
-  color:white;
-  font-size:1.5rem;
-  padding:6px 10px;
-}
-.nav.left { left:-44px; }
-.nav.right { right:-44px; }
-
-/* ---------- VALENTINE BUTTON ---------- */
-.pulse {
-  animation: pulse 1.5s infinite;
-}
-@keyframes pulse {
-  0% { box-shadow:0 0 0 0 rgba(255,20,80,0.6); }
-  70% { box-shadow:0 0 0 18px rgba(255,20,80,0); }
+  position: absolute;
+  bottom: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 18px;
 }
 
-/* ---------- POPUP ---------- */
+.arrow {
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+
+.dots {
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+
+.dot {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.4);
+}
+
+.dot.active { background: white; }
+
+/* ================= POPUP ================= */
 .popup {
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,0.85);
-  display:none;
-  place-items:center;
-  z-index:9500;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  display: none;
+  place-items: center;
+  z-index: 6000;
 }
 
 .popup-content {
-  width:min(90vw,360px);
-  padding:28px;
-  background:white;
-  color:#111;
-  border-radius:22px;
-  text-align:center;
-  font-family:'Pacifico', cursive;
+  width: min(90vw, 360px);
+  padding: 26px;
+  border-radius: 22px;
+  background: white;
+  color: #111;
+  text-align: center;
+  font-family: 'Pacifico', cursive;
 }
 
-/* ---------- CONFETTI ---------- */
-.heart {
-  position:fixed;
-  top:-10px;
-  font-size:18px;
+/* ================= CONFETTI ================= */
+.confetti {
+  position: fixed;
+  top: -10px;
+  font-size: 18px;
   animation: fall linear forwards;
 }
+
 @keyframes fall {
-  to { transform:translateY(110vh) rotate(360deg); opacity:0; }
+  to { transform: translateY(110vh); opacity: 0; }
 }
 </style>
 </head>
@@ -230,8 +251,8 @@ h2 { margin:8px 0; }
 
 <div id="lockScreen">
   <div class="lock-box">
-    <h3>For Rohini ❤️</h3>
-    <input id="password" type="password">
+    <h2>For Rohini ❤️</h2>
+    <input type="password" id="password" placeholder="Secret word" />
     <button onclick="unlock()">Open 💖</button>
   </div>
 </div>
@@ -239,107 +260,202 @@ h2 { margin:8px 0; }
 <div id="intro">
   <div>
     <h1 class="fade">Every love story is beautiful…</h1>
-    <h2 class="fade" style="animation-delay:2s;">but ours is my favorite ❤️</h2>
+    <h2 class="fade" style="animation-delay:2s">but ours is my favorite ❤️</h2>
   </div>
 </div>
 
-<p id="testLabel">🧪 Unlocked earlier days (test mode)</p>
+<div id="testLabel">🧪 Unlocked earlier days (test mode)</div>
 
 <div id="app">
-  <button class="nav left" onclick="prev()">❮</button>
-  <button class="nav right" onclick="next()">❯</button>
 
-  <div class="story" id="story">
-    <div class="track" id="track">
-
-      <div class="card" data-day="7"><h2>🌹 Rose Day</h2><div class="image-frame"><img src="rose.jpg"></div><p class="note">Our love bloomed beautifully 🌹<br><span class="tamil">நம்ம காதல் அழகா மலர்ந்த நாள்</span></p></div>
-      <div class="card" data-day="8"><h2>💍 Propose Day</h2><div class="image-frame"><img src="propose.jpg"></div><p class="note">I chose you forever 💍<br><span class="tamil">வாழ்க்கை முழுக்க உன்னைத் தேர்ந்தெடுத்த நாள்</span></p></div>
-      <div class="card" data-day="9"><h2>🍫 Chocolate Day</h2><div class="image-frame"><img src="chocolate.jpg"></div><p class="note">Sweet moments matter 🍫<br><span class="tamil">சின்ன நிமிஷங்கள்தான் இனிமை</span></p></div>
-      <div class="card" data-day="10"><h2>🧸 Teddy Day</h2><div class="image-frame"><img src="teddy.jpg"></div><p class="note">Everything feels cute 🧸<br><span class="tamil">உன்னோட இருந்தா எல்லாமே அழகு</span></p></div>
-      <div class="card" data-day="11"><h2>🤞 Promise Day</h2><div class="image-frame"><img src="promise.jpg"></div><p class="note">Always your side 🤞<br><span class="tamil">எப்போதும் உன் பக்கம் நான்</span></p></div>
-      <div class="card" data-day="12"><h2>🤗 Hug Day</h2><div class="image-frame"><img src="hug.jpg"></div><p class="note">You are home 🤍<br><span class="tamil">உன் அணைப்பே என் வீடு</span></p></div>
-      <div class="card" data-day="13"><h2>😘 Kiss Day</h2><div class="image-frame"><img src="kiss.jpg"></div><p class="note">No words needed 😘<br><span class="tamil">சொல்லாமலே புரியும்</span></p></div>
-
-      <div class="card" data-day="14">
-        <h2>❤️ Valentine’s Day</h2>
-        <div class="image-frame"><img src="valentine.jpg"></div>
-        <p class="note">Forever us ❤️<br><span class="tamil">இரண்டு இதயங்கள்… ஒரே வாழ்க்கை</span></p>
-        <button class="pulse" onclick="openLove()">🎁 Open Surprise</button>
-      </div>
-
-    </div>
-  </div>
+<!-- 🌹 Rose Day -->
+<div class="day dimmed">
+  <h2>🌹 Rose Day</h2>
+  <div class="photo"><img src="rose.jpg"></div>
+  <p class="note">
+    Our love bloomed beautifully 🌹<br>
+    நம்ம காதல் ஒரு அழகான மலராக மலர்ந்த நாள்
+  </p>
 </div>
 
-<div class="popup" id="popup">
-  <div class="popup-content">
-    <h2>My Rohini 💌</h2>
-    <p>Loving you is the best decision of my life.<br><br>எப்போதும்… உன்னோடு ❤️</p>
-    <button onclick="closeLove()">Close ❤️</button>
-  </div>
+<!-- 💍 Propose Day -->
+<div class="day dimmed">
+  <h2>💍 Propose Day</h2>
+  <div class="photo"><img src="propose.jpg"></div>
+  <p class="note">
+    I promised you my forever 💍<br>
+    என் வாழ்கையின் எல்லா நாள்களும் உன்னோடே
+  </p>
 </div>
+
+<!-- 🍫 Chocolate Day -->
+<div class="day active">
+  <h2>🍫 Chocolate Day</h2>
+  <div class="photo"><img src="chocolate.jpg"></div>
+  <p class="note">
+    The sweetest moments are the simplest 🍫<br>
+    சின்ன சின்ன நிமிஷங்கள்தான் வாழ்க்கையின் இனிமை
+  </p>
+</div>
+
+<!-- 🧸 Teddy Day -->
+<div class="day">
+  <h2>🧸 Teddy Day</h2>
+  <div class="photo"><img src="teddy.jpg"></div>
+  <p class="note">
+    Everything feels cute with you 🧸<br>
+    நீ இருக்கும்போது எல்லாமே அழகா இருக்குது
+  </p>
+</div>
+
+<!-- 🤞 Promise Day -->
+<div class="day">
+  <h2>🤞 Promise Day</h2>
+  <div class="photo"><img src="promise.jpg"></div>
+  <p class="note">
+    Forever by your side 🤞<br>
+    எப்போதும் உன் பக்கம் நின்று கொண்டே இருப்பேன்
+  </p>
+</div>
+
+<!-- 🤗 Hug Day -->
+<div class="day">
+  <h2>🤗 Hug Day</h2>
+  <div class="photo"><img src="hug.jpg"></div>
+  <p class="note">
+    Your hug feels like home 🤍<br>
+    உன் அணைப்பு தான் என் வீடு
+  </p>
+</div>
+
+<!-- 😘 Kiss Day -->
+<div class="day">
+  <h2>😘 Kiss Day</h2>
+  <div class="photo"><img src="kiss.jpg"></div>
+  <p class="note">
+    Some feelings need no words 😘<br>
+    சில உணர்வுகளுக்கு வார்த்தைகள் தேவையில்லை
+  </p>
+</div>
+
+<!-- ❤️ Valentine’s Day -->
+<div class="day">
+  <h2>❤️ Valentine’s Day</h2>
+  <div class="photo"><img src="valentine.jpg"></div>
+  <p class="note">
+    Two hearts. One life. Forever ❤️<br>
+    இரண்டு இதயங்கள்… ஒரு வாழ்க்கை… எப்போதும்
+  </p>
+  <button onclick="openLove()">🎁 Open Surprise</button>
+</div>
+
+
+  <div class="nav">
+    <div class="arrow">◀</div>
+    <div class="arrow">▶</div>
+  </div>
+
+  <div class="dots">
+    <div class="dot active"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+
+</div>
+
+<audio id="bgMusic" loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3">
+</audio>
 
 <script>
 const TEST_MODE = true;
-const allowed = ['rohini','kannamma'];
-let index = 0;
-
-const cards = document.querySelectorAll('.card');
-const track = document.getElementById('track');
+const allowedPasswords = ['rohini','kannamma'];
 
 function unlock() {
-  if (allowed.includes(password.value.toLowerCase())) {
-    lockScreen.style.display = 'none';
-    intro.style.display = 'grid';
-    setTimeout(()=>intro.style.display='none',6000);
-    setup();
+  const v = password.value.trim().toLowerCase();
+  if (!allowedPasswords.includes(v)) return alert('Wrong password 💔');
+
+  lockScreen.style.display = 'none';
+  intro.style.display = 'grid';
+  bgMusic.play();
+
+  setTimeout(() => intro.style.display = 'none', 6000);
+}
+
+const DAYS = [7, 8, 9, 10, 11, 12, 13, 14];
+
+const todayDate = new Date();
+const today = todayDate.getDate();
+const isFebruary = todayDate.getMonth() === 1;
+
+const dayCards = document.querySelectorAll('.day');
+
+let activeIndex = 0;
+
+// Reset and apply visibility rules
+dayCards.forEach((card, index) => {
+  card.classList.remove('active', 'dimmed');
+  card.style.display = 'none';
+
+  if (TEST_MODE) {
+    // 🧪 Test mode: show ALL days
+    card.style.display = 'flex';
+
+    if (DAYS[index] < today) {
+      card.classList.add('dimmed');
+    }
+  } else {
+    // 🌍 Production mode
+    if (isFebruary && DAYS[index] <= today) {
+      card.style.display = 'flex';
+
+      if (DAYS[index] < today) {
+        card.classList.add('dimmed');
+      }
+    }
   }
-}
 
-function setup() {
-  const today = new Date().getDate();
-  cards.forEach((c,i)=>{
-    const d = +c.dataset.day;
-    if (d < today) c.classList.add('past');
-    else if (d > today) c.classList.add('locked');
-    if ((TEST_MODE && d <= today) || (!TEST_MODE && d === today)) index = i;
-  });
-  update();
-}
-
-function update() { track.style.transform = `translateX(-${index*100}%)`; }
-function next() { if(index<cards.length-1 && !cards[index+1].classList.contains('locked')){index++;update();} }
-function prev() { if(index>0){index--;update();} }
-
-let startX=0;
-story.addEventListener('touchstart',e=>startX=e.touches[0].clientX);
-story.addEventListener('touchend',e=>{
-  const dx=e.changedTouches[0].clientX-startX;
-  if(dx<-50) next();
-  if(dx>50) prev();
+  // Determine active day
+  if (
+    (TEST_MODE && DAYS[index] <= today) ||
+    (!TEST_MODE && DAYS[index] === today)
+  ) {
+    activeIndex = index;
+  }
 });
 
-function openLove(){
-  popup.style.display='grid';
-  if(new Date().getMonth()===1 && new Date().getDate()===14) confetti();
-}
-function closeLove(){ popup.style.display='none'; }
+// Activate today
+dayCards[activeIndex].classList.add('active');
 
-function confetti(){
-  const colors=['#ff1744','#ff5fa2','#ffd700','#fff'];
-  const end=Date.now()+9000;
-  const i=setInterval(()=>{
-    const h=document.createElement('div');
-    h.className='heart';
-    h.innerHTML='❤️';
-    h.style.left=Math.random()*100+'vw';
-    h.style.color=colors[Math.floor(Math.random()*colors.length)];
-    h.style.animationDuration='5s';
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),6000);
-    if(Date.now()>end) clearInterval(i);
-  },250);
+// Hide test label in production
+if (!TEST_MODE) {
+  const label = document.getElementById('testLabel');
+  if (label) label.style.display = 'none';
 }
+
+
+const arrows = document.querySelectorAll('.arrow');
+
+function showDay(index) {
+  dayCards.forEach(d => d.classList.remove('active'));
+  dayCards[index].classList.add('active');
+}
+
+arrows[0].onclick = () => {
+  if (activeIndex > 0) {
+    activeIndex--;
+    showDay(activeIndex);
+  }
+};
+
+arrows[1].onclick = () => {
+  if (activeIndex < dayCards.length - 1) {
+    activeIndex++;
+    showDay(activeIndex);
+  }
+};
+
+
 </script>
 
 </body>
