Added all 7 days

--- a/index.html
+++ b/index.html
@@ -178,24 +178,86 @@ button:hover { background: #ff1744; }
 <!-- 📖 STORY -->
 <div id="app">
 
-<div class="day">
-  <h2>🍫 Chocolate Day</h2>
-  <div class="photo"><img src="chocolate.jpg"></div>
-  <p class="note">
-    The sweetest moments are the simplest 🍫<br>
-    சின்ன சின்ன நிமிஷங்கள்தான் வாழ்க்கையின் இனிமை
-  </p>
-</div>
+  <!-- 🌹 Rose Day -->
+  <div class="day">
+    <h2>🌹 Rose Day</h2>
+    <div class="photo"><img src="rose.jpg"></div>
+    <p class="note">
+      Our love bloomed beautifully 🌹<br>
+      நம்ம காதல் ஒரு அழகான மலராக மலர்ந்த நாள்
+    </p>
+  </div>
 
-<div class="day">
-  <h2>❤️ Valentine’s Day</h2>
-  <div class="photo"><img src="valentine.jpg"></div>
-  <p class="note">
-    Two hearts. One life. Forever ❤️<br>
-    இரண்டு இதயங்கள்… ஒரு வாழ்க்கை… எப்போதும்
-  </p>
-  <button onclick="openLove()">🎁 Open Surprise</button>
-</div>
+  <!-- 💍 Propose Day -->
+  <div class="day">
+    <h2>💍 Propose Day</h2>
+    <div class="photo"><img src="propose.jpg"></div>
+    <p class="note">
+      I promised you my forever 💍<br>
+      என் வாழ்கையின் எல்லா நாள்களும் உன்னோடே
+    </p>
+  </div>
+
+  <!-- 🍫 Chocolate Day -->
+  <div class="day">
+    <h2>🍫 Chocolate Day</h2>
+    <div class="photo"><img src="chocolate.jpg"></div>
+    <p class="note">
+      The sweetest moments are the simplest 🍫<br>
+      சின்ன சின்ன நிமிஷங்கள்தான் வாழ்க்கையின் இனிமை
+    </p>
+  </div>
+
+  <!-- 🧸 Teddy Day -->
+  <div class="day">
+    <h2>🧸 Teddy Day</h2>
+    <div class="photo"><img src="teddy.jpg"></div>
+    <p class="note">
+      Everything feels cute with you 🧸<br>
+      நீ இருக்கும்போது எல்லாமே அழகா இருக்குது
+    </p>
+  </div>
+
+  <!-- 🤞 Promise Day -->
+  <div class="day">
+    <h2>🤞 Promise Day</h2>
+    <div class="photo"><img src="promise.jpg"></div>
+    <p class="note">
+      Forever by your side 🤞<br>
+      எப்போதும் உன் பக்கம் நின்று கொண்டே இருப்பேன்
+    </p>
+  </div>
+
+  <!-- 🤗 Hug Day -->
+  <div class="day">
+    <h2>🤗 Hug Day</h2>
+    <div class="photo"><img src="hug.jpg"></div>
+    <p class="note">
+      Your hug feels like home 🤍<br>
+      உன் அணைப்பு தான் என் வீடு
+    </p>
+  </div>
+
+  <!-- 😘 Kiss Day -->
+  <div class="day">
+    <h2>😘 Kiss Day</h2>
+    <div class="photo"><img src="kiss.jpg"></div>
+    <p class="note">
+      Some feelings need no words 😘<br>
+      சில உணர்வுகளுக்கு வார்த்தைகள் தேவையில்லை
+    </p>
+  </div>
+
+  <!-- ❤️ Valentine’s Day -->
+  <div class="day">
+    <h2>❤️ Valentine’s Day</h2>
+    <div class="photo"><img src="valentine.jpg"></div>
+    <p class="note">
+      Two hearts. One life. Forever ❤️<br>
+      இரண்டு இதயங்கள்… ஒரு வாழ்க்கை… எப்போதும்
+    </p>
+    <button onclick="openLove()">🎁 Open Surprise</button>
+  </div>
 
 </div>
 
