--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ button:hover { background: #ff1744; }
 
 <script>
 /* ================= CONFIG ================= */
-const TEST_MODE = true;
+const TEST_MODE = false;
 const allowedPasswords = ['rohini', 'kannamma'];
 
 const dayCards = document.querySelectorAll('.day');
